--- a/package.json
+++ b/package.json
@@ -194,6 +194,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "FreshPhp",
+  "license": ""
 }
